--- a/Front/templates/index.html
+++ b/Front/templates/index.html
@@ -1,11 +1,20 @@
 <html>
+    <head>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- font awesome from BootstrapCDN -->
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+
+        <link href="/css/app.css" rel="stylesheet">
+    </head>
     <body class="home">
         <div class="container">
             <div class="login-page clearfix">
               <div class="login-box auth0-box before">
-                <img src="https://i.cloudup.com/StzWWrY34s.png" />
-                <h3>Auth0 Example</h3>
-                <p>Zero friction identity infrastructure, built for developers</p>
+                <img src="https://ferreteriacaball.com/wp-content/uploads/2017/09/Yale-logo-01-1.png" width="200" height="200" />
+                <h3>Yale</h3>
                 <a class="btn btn-primary btn-lg btn-login btn-block" href="/login">Log In</a>
               </div>
             </div>
