--- a/Front/templates/dashboard.html
+++ b/Front/templates/dashboard.html
@@ -10,23 +10,32 @@
         <!-- <link href="/css/app.css" rel="stylesheet"> -->
         
         <!-- CSS por Andres -->
-        <link href="/css/dashboard.css" rel="stylesheet"> 
+        <link type= "text/css" rel="stylesheet" href="{{ url_for('static',filename='styles/dashboard.css') }}">
+        
+        <!-- Nuestros JS -->
+        <script src="{{ url_for('static', filename='functions/analizar.js')}}"></script>
     </head>
     <body class="home">
-        <div class="container">
-        <table>
-        <h1> Mapa de Residencias </h1>
-        <div id="mapa2" class="container" >
-        {% for x in residenciasUnidad %}
-        <div class="row">
-          <div>
-            <img id="{{x.id}}img" src="https://image.ibb.co/cJTS0d/greenhouse.png" alt="Imagen Casa Verde" height="200" width="200">
-            <p class="textoAlarma" id="{{x.id}}texto">Sin alarmas!</p>
-          </div>
+        <div>
+            <table>
+            <h1> Mapa de Residencias </h1>
+            <div class="mapa">
+                <div class="row" id="mapaRow">
+                  {% for x in residenciasUnidad %}
+                  <div class="rowContainer">
+                    <h4 class="nombreRow">{{x.nombreResidencia}} {{x.id}}</h4>
+                    <img class="itemRow" id="{{x.id}}img" src="https://image.ibb.co/cJTS0d/greenhouse.png" alt="Imagen Casa Verde" height="200" width="200">
+                    <p class="textoAlarma" id="{{x.id}}texto">Sin alarmas!</p>
+                  </div>
+                  {% endfor %}
+                </div>
+            </div>
+            </table>
         </div>
-        {% endfor %}
-        </div>
-        </table>
-        </div>
+    {% for x in residenciasUnidad %}
+    <script>
+        analizar({{x.id}},"{{token}}");
+    </script>
+    {% endfor %}
     </body>
 </html>
