--- a/Front/static/styles/dashboard.css
+++ b/Front/static/styles/dashboard.css
@@ -18,11 +18,6 @@
 }
 
 .itemRow {
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
+    margin: auto;
+    display: block;
 }
