--- a/Front/templates/DetalleInmueble.html
+++ b/Front/templates/DetalleInmueble.html
@@ -39,8 +39,8 @@
        <br>
        <p class="textoTitulo">Información Contacto Propietario </p>
        <br>
-       <p class="textoInfo">Nombre: <p id="nombreProp">EL NOMBRE</p></p>
-       <p class="textoInfo">Correo Electrónico: EL EMAIL </p>
+       <p class="textoInfo">Nick Name: {{profile['userName']}}</p></p>
+       <p class="textoInfo">Correo Electrónico: {{profile['email']}}</p>
      </div>
     </div>  
    </div>
