--- a/Front/templates/DetalleInmueble.html
+++ b/Front/templates/DetalleInmueble.html
@@ -15,7 +15,7 @@
     </head>
     <body class="home">
         <div>
-            <h1> Detalle residencia </h1>
+            <h1 style="text-align:center;"> Detalle residencia </h1>
              <div class="container bloque">
    <div class="row fila">
      <div class="col-md-6">
