--- a/Front/templates/dashboard.html
+++ b/Front/templates/dashboard.html
@@ -18,7 +18,7 @@
     <body class="home">
         <div>
             <table>
-            <h1> Mapa de Residencias </h1>
+            <h1 style="text-align:center;"> Mapa de Residencias </h1>
             <div class="mapa">
                 {% for y in dataUR %}
                     <div class="container">
