--- a/Front/templates/DetalleInmueble.html
+++ b/Front/templates/DetalleInmueble.html
@@ -25,8 +25,8 @@
        <br>
        <p class="textoTitulo">Información Inmueble</p>
        <br>
-       <p class="textoInfo">Id Inmueble: EL ID</p>
-       <p class="textoInfo">Nombre Inmueble: EL NOMBRE </p> 
+       <p class="textoInfo">Id Inmueble: {{idResidencia}}</p>
+       <p class="textoInfo">Nombre Inmueble: {{NombreResidencia}} </p> 
      </div>
    </div>
   </div>
